fix pm2 and add look

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,11 @@ test/coverage/
 migrations/
 
 # Configuration Files
-/config/env/development.json5
-/config/env/production.json5
-/config/env/test.json5
+config/env/development.json5
+config/env/production.json5
+config/env/test.json5
+app/config/
+config/env/all.json5
 
 *.local
 
