--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jshint-stylish": "^2.1.0",
     "json5": "^0.4.0",
     "lodash": "latest",
+    "look": "^0.1.3",
     "method-override": "^2.3.5",
     "moment": "^2.14.1",
     "morgan": "^1.6.1",
